--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@vitalets/google-translate-api": "^9.2.1",
     "dotenv": "^17.0.0",
     "next": "15.3.4",
     "react": "^19.0.0",
